test/end-to-end/compile-errors/variant-no-member.crow
main void()
	info log match x
	as w
		"w"
	as x
		"x"
	else
		"other"

v variant
x variant-member(v)

